@@ -26,6 +26,7 @@ Changelog
 2019.1.2 (2019-03-07)
 ---------------------
 
+- Add WebActionsProvider. [njohner]
 - Add mapping between public and gever permissions. [njohner]
 - Disable CSRF protect on webaction api post requests. [njohner]
 - Make sure task and journal PDFs object_provides index is up to date after resolving a dossier. [njohner]
